# xmlrenderer

./: .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: Findlibxslt.cmake
covtest/: run
src/: stacked_exception.h  taglib.hpp  xmllib.cpp  xmllib.hpp
tests/: boilerplate-nocomment.output  boilerplate.output  boilerplate.xml  test.cpp  xslt-test.xsl
xmlrenderer/: parser_test.cpp  renderproc.cpp  stacked_exception.cpp  taglib.hpp  test_parser.cpp  test_parser.hpp  xmllib.cpp  xmllib.hpp  xmlrenderer.hpp
